add cloudmock and bazel

--- a/pkg/model/awsmodel/BUILD.bazel
+++ b/pkg/model/awsmodel/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "api_loadbalancer.go",
         "autoscalinggroup.go",
         "context.go",
+        "oidc_provider.go",
     ],
     importpath = "k8s.io/kops/pkg/model/awsmodel",
     visibility = ["//visibility:public"],
@@ -16,6 +17,7 @@ go_library(
         "//pkg/model:go_default_library",
         "//pkg/model/defaults:go_default_library",
         "//pkg/model/spotinstmodel:go_default_library",
+        "//pkg/sshcredentials:go_default_library",
         "//upup/pkg/fi:go_default_library",
         "//upup/pkg/fi/cloudup/awstasks:go_default_library",
         "//upup/pkg/fi/fitasks:go_default_library",
