add integration tests for oidc provider inputs (should fail due to no outputs)

--- a/tests/integration/update_cluster/complex/in-legacy-v1alpha2.yaml
+++ b/tests/integration/update_cluster/complex/in-legacy-v1alpha2.yaml
@@ -42,6 +42,8 @@ spec:
   - 1.2.3.4/32
   - 10.20.30.0/24
   nonMasqueradeCIDR: 100.64.0.0/10
+  serviceOIDCProvider:
+    issuer: https://oidc.example.com/foo
   sshAccess:
   - 0.0.0.0/0
   topology:
