Set docs and bindata to generated

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 BUILD.bazel linguist-generated=true
+^/docs/cli linguist-generated=true
+bindata.go linguist-generated=true
+^/vendor linguist-generated=true
